--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "discord.js": "^13.8.1",
+    "@types/mssql": "^8.1.1",
+    "discord.js": "^14.6.0",
     "mssql": "^8.1.2"
   }
 }
